# sees

./: .gitignore  CMakeLists.txt  README.md  justfile  xmake.lua
app/: Application.cpp  Application.h  CMakeLists.txt  main.cpp  resources.qrc
app/player/: CMakeLists.txt  MpvPlayer.cpp  MpvPlayer.h  MpvProps.h
app/qml/: AboutView.qml  CMakeLists.txt  FollowView.qml  Fonts.qml  IconButton.qml  Icons.qml  InfoView.qml  MainWindow.qml  Panel.qml  Player.qml  RoomCover.qml  SearchBox.qml  SearchView.qml  Shortcuts.qml
app/source/: CMakeLists.txt  Douyu.cpp  Douyu.h  DouyuProvider.cpp  DouyuProvider.h  HuyaProvider.cpp  HuyaProvider.h  MediaInfo.h  MetaInfo.h  Model.cpp  Model.h  Source.cpp  Source.h  SourceProvider.cpp  SourceProvider.h  Types.h
src/: main.cpp  xmake.lua
src/player/: mpv.cpp  mpv.h
src/ui/: player_widget.cpp  player_widget.h
